[package]
name = "quickerr"
version = "0.1.0"
edition = "2021"
authors = ["PROMETHIA"]
description = "A macro to define errors quickly, like `thiserror` but terser and more opinionated"
readme = "README.md"
repository = "https://github.com/PROMETHIA-27/quickerr"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
